Fixed up GET /annoations and GET /annoations/{annotationId}
